[tool.poetry]
name = "mlexperiment2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.35"
datasets = "2.15.0"
peft = "0.4.0"
accelerate = "0.21.0"
bitsandbytes = "0.40.2"
trl = "0.4.7"
safetensors = "0.3.1"
tiktoken = "^0.6.0"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
